syntax="proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/just-umyt/homework_all-just-umyt/cart/pkg/api";


service CartService {
    rpc AddItem(CartAddItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cart/item/add"
            body: "*"
        };
    }
    rpc DeleteItem(CartDeleteItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cart/item/delete"
            body: "*"
        };
    }
    rpc ListItem(CartUserIDRequest) returns (CartListItemResponse) {
        option (google.api.http) = {
            post: "/cart/list"
            body: "*"
        };
    }
    rpc ClearCart(CartUserIDRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cart/clear"
            body: "*"
        };
    }
}

message CartAddItemRequest {
    int64 user_id = 1;
    uint32 sku = 2;
    uint32 count = 3;
}

message  CartDeleteItemRequest {
    int64 user_id = 1;
    uint32 sku = 2;
}

message CartUserIDRequest {
    int64 user_id = 1;
}


message CartListItemResponse {
    repeated CartItem items = 1;
    uint32 totalPrice = 2;
}

message CartItem {
    uint32 sku = 1;
    uint32 count = 2;
    string name = 3;
    uint32 price = 4;
}
